--- a/plugins/org.jkiss.dbeaver.ext.clickhouse/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.jkiss.dbeaver.ext.clickhouse/OSGI-INF/l10n/bundle.properties
@@ -1,8 +1,8 @@
-meta.org.jkiss.dbeaver.ext.clickhouse.model.ClickhouseTable.statObjectSize.name=Table size
-meta.org.jkiss.dbeaver.ext.clickhouse.model.ClickhouseTable.statObjectSize.description=Table size on disk
-meta.org.jkiss.dbeaver.ext.clickhouse.model.ClickhouseTable.lastModifyTime.name=Last modify time
-meta.org.jkiss.dbeaver.ext.clickhouse.model.ClickhouseTable.maxDate.name=Max date
-meta.org.jkiss.dbeaver.ext.clickhouse.model.ClickhouseTable.minDate.name=Min time
-meta.org.jkiss.dbeaver.ext.clickhouse.model.ClickhouseTable.engine.name=Engine
-meta.org.jkiss.dbeaver.ext.clickhouse.model.ClickhouseTable.metadataPath.name=Metadata Path
-meta.org.jkiss.dbeaver.ext.clickhouse.model.ClickhouseTable.engineMessage.name=Engine Parameters
+meta.org.jkiss.dbeaver.ext.clickhouse.model.TimeplusTable.statObjectSize.name=Table size
+meta.org.jkiss.dbeaver.ext.clickhouse.model.TimeplusTable.statObjectSize.description=Table size on disk
+meta.org.jkiss.dbeaver.ext.clickhouse.model.TimeplusTable.lastModifyTime.name=Last modify time
+meta.org.jkiss.dbeaver.ext.clickhouse.model.TimeplusTable.maxDate.name=Max date
+meta.org.jkiss.dbeaver.ext.clickhouse.model.TimeplusTable.minDate.name=Min time
+meta.org.jkiss.dbeaver.ext.clickhouse.model.TimeplusTable.engine.name=Engine
+meta.org.jkiss.dbeaver.ext.clickhouse.model.TimeplusTable.metadataPath.name=Metadata Path
+meta.org.jkiss.dbeaver.ext.clickhouse.model.TimeplusTable.engineMessage.name=Engine Parameters
